// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MetricTitle /> should render the metric title 1`] = `
<div>
  <div
    class="title"
  >
    content
  </div>
</div>
`;

exports[`<MetricTitle /> should render the metric title with a badge 1`] = `
<div>
  <div
    class="title"
  >
    content
    <div
      class="badge trend"
    >
      <i
        class="material-icons trendIcon"
      >
        trending_up
      </i>
      123
    </div>
  </div>
</div>
`;

exports[`<MetricTitle /> should render the metric title with a hint 1`] = `
<div>
  <div
    class="title"
  >
    content
    <div
      class="wrapper"
    >
      <i
        class="material-icons-outlined icon"
        id="tooltip-1"
      >
        info
      </i>
    </div>
  </div>
</div>
`;
